<resources>
    <string name="app_name">South Matrimony</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="auth_client_needs_enabling_title">An application requires Google Play Services to be enabled.</string>
    <string name="auth_client_needs_installation_title">An application requires installation of Google Play Services.</string>
    <string name="auth_client_needs_update_title">An application requires an update for Google Play Services.</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="auth_client_using_bad_version_title">An application attempted to use a bad version of Google Play Services.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="MyRecentVisitors">Recent Profile Visitors</string>
    <string name="PG">PG Degree</string>
    <string name="PG_College">PG College</string>
    <string name="Rs">₹</string>
    <string name="UG">Graduation Degree</string>
    <string name="UG_College">Graduation College</string>
    <string name="about_partner">About My Partner</string>
    <string name="accept_me">Accepted Me</string>
    <string name="addAnotherFromCamera">Choose Another Photo</string>
    <string name="addAnotherFromGallery">Choose Another Photo</string>
    <string name="addMoreFromGallery">Choose More Photos</string>
    <string name="addMoreFronCamera">Click More Photos</string>
    <string name="age">Age</string>
    <string name="age_and_height">Age and Height</string>
    <string name="age_from_bride">18</string>
    <string name="age_from_groom">21</string>
    <string name="age_from_va_groom">21 years</string>
    <string name="age_from_val_bride">18 years</string>
    <string name="age_to">35</string>
    <string name="age_to_val">35 years</string>
    <string name="alt_phone">Alternate mobile no</string>
    <string name="amount">Amount</string>
    <string name="annual_inc">Annual Income</string>
    <string name="apply_results">APPLY</string>
    <string name="assets">Assets</string>
    <string name="assets_menu">House, Car</string>
    <string name="back">Back</string>
    <string name="basic_details">Basic Details</string>
    <string name="block">Block</string>
    <string name="body_type">Body Type</string>
    <string name="book_not_filled">Books will be screened before going live.</string>
    <string name="books">Books</string>
    <string name="bride">F</string>
    <string name="bride_text">Bride</string>
    <string name="browse_my_matches">Browse My Matches</string>
    <string name="by_verifiying_above_number">By verifying above number. I agree to allow Jeevansathi to contact me irrespective of the number being registered in DND</string>
    <string name="call_customare">Call Customer Care</string>
    <string name="call_us">Call us</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="car">Car</string>
    <string name="career_details">Career Details</string>
    <string name="cart">Cart</string>
    <string name="cast">Cast</string>
    <string name="caste">Caste</string>
    <string name="challenged">Challenged</string>
    <string name="choose_option">Choosing this option will reduce response from other members</string>
    <string name="city">City</string>
    <string name="city_living_in">City living in</string>
    <string name="city_state">City/State</string>
    <string name="close">Close</string>
    <string name="college">College Details</string>
    <string name="college_menu">PG degree, PG college name, Graduation degree, graduation college name, School name</string>
    <string name="complexion">Complexion</string>
    <string name="connection_lost">Connection Lost</string>
    <string name="connection_lost_retry">RETRY</string>
    <string name="contact_us_path_pattern">/e/a11/.*</string>
    <string name="content_description">Image Missing!</string>
    <string name="contiue">CONTINUE</string>
    <string name="cook">Food I cook</string>
    <string name="cook_not_filled">Food I cook will be screened before going live.</string>
    <string name="country">Country</string>
    <string name="country_city">Country - City living in</string>
    <string name="country_living_in">Country Living in</string>
    <string name="create_profile_for">Create Profile For</string>
    <string name="cuisine">Cuisine</string>
    <string name="current_location">Current location</string>
    <string name="date_incorrect_msg">Your phone date is incorrect! Adjust your clock and try again.</string>
    <string name="del_saved_search">Saved Search Limit Reached</string>
    <string name="delete">Delete</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="did_not_receive_code">"Didn't recieve code?"</string>
    <string name="diet">Diet</string>
    <string name="do_you">Do you want to save the changes made before navigating away from this view?</string>
    <string name="dob">Date of birth</string>
    <string name="dollar">$</string>
    <string name="done">DONE</string>
    <string name="dress">Dress Style</string>
    <string name="drink">Drink</string>
    <string name="duration">Duration</string>
    <string name="edit">Edit</string>
    <string name="edit_profile_dpp_path_pattern">/e/a13/.*</string>
    <string name="edit_profile_path_pattern">/e/a12/.*</string>
    <string name="edit_profile_upload_photo_path_pattern">/e/a3/.*</string>
    <string name="edit_warning_text">Complete your profile by filling details marked in red</string>
    <string name="edit_warning_text_dpp">The criteria below influences the matches and interests you receive</string>
    <string name="education">About My Education</string>
    <string name="education_not_filled">Education will be screened before going live.</string>
    <string name="education_occupation">Education and Occupation</string>
    <string name="email">Email ID</string>
    <string name="email_us">Email us at</string>
    <string name="enter_code_hint">Enter Code</string>
    <string name="eoi_recieved_path_pattern">/e/a9/.*</string>
    <string name="exp_msg">Upgrade your membership,swipe to browse plans</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_app_id">585643201533025</string>
    <string name="favorite">Favourite</string>
    <string name="favorite_menu">Read, Books, TV Shows, Music,Movie genres</string>
    <string name="female">Female</string>
    <string name="filter_settings_message">Filters help you control who contacts you. <b>For example</b>, if your Desired Partner’s age range is 24–27 years old, and its filter is ‘ON’, then profiles younger than 24 years or older than 27 years will not be able to see your Phone/EmailID and their Interests will go to your Filtered Inbox.</string>
    <string name="filtered_interest_recieved">/e/a15/.*</string>
    <string name="forgot_password_button">SEND</string>
    <string name="forgot_your_password">Forgot password?</string>
    <string name="fresh">Fresh Profiles</string>
    <string name="future_plan">Future Plans</string>
    <string name="ga_sampleFrequency">100.0</string>
    <string name="ga_trackingId">UA-179986-4</string>
    <string name="gallery">Gallery</string>
    <string name="gender">Gender</string>
    <string name="give_miss">GIVE A MISSED CALL</string>
    <string name="groom">M</string>
    <string name="groom_text">Groom</string>
    <string name="habbit">Habits</string>
    <string name="habbit_menu">Diet, Smoke, Drink</string>
    <string name="have_children">Have Children</string>
    <string name="height">Height</string>
    <string name="height_from_label">"4'0\""</string>
    <string name="height_from_val">1</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Email id</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="search">SEARCH</string>
    <string name="search_caste_hint">Search Caste</string>
    <string name="select_lower_age">Select Lower Age Limit</string>
</resources>